--- a/AppBuilder1/index.html
+++ b/AppBuilder1/index.html
@@ -23,7 +23,7 @@
             <div data-role="navbar">
                 <a data-role="backbutton" data-align="left">Back</a>
                 <span data-role="view-title"></span>
-                <a data-align="right" data-role="button" class="nav-button" href="#/">Index</a>
+                <a data-align="right" data-role="button" class="nav-button" href="#/">IndexDooDoo</a>
             </div>
         </header>
 
