Changes made by Ian Muirhead (ianmuirhead@gmail.com).

--- a/Mining News from MINING.com/index.html
+++ b/Mining News from MINING.com/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link href="bower_components/kendo-ui-appbuilder-core/styles/kendo.mobile.all.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
-
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic' rel='stylesheet' type='text/css'>
     <!-- cordova script (this will be a 404 during development if served with `grunt serve`) -->
     <script src="cordova.js"></script>
 
