Changes made by Ian Muirhead (ianmuirhead@gmail.com).

--- a/Mining News from MINING.com/index.html
+++ b/Mining News from MINING.com/index.html
@@ -56,8 +56,8 @@
 
         <div data-role="listview" data-style="inset">
             <h1 id="article-title"></h1>
-            <span id="byline">Published by <span id="article-author"></span> on <span id="article-date"></span></span>
-            <img id="article-thumbnail" src="" style="min-width: 300px; width: 100%;" />
+            <span id="byline" class="byline">Published by <span id="article-author"></span> on <span id="article-date"></span></span>
+            <img id="article-thumbnail" class="article-thumbnail" src="" />
             <div id="article-content">
             </div>
         </div>
