--- a/Mining News from MINING.com/index.html
+++ b/Mining News from MINING.com/index.html
@@ -11,13 +11,13 @@
     <script src="cordova.js"></script>
 
     <script src="bower_components/kendo-ui-appbuilder-core/js/jquery.min.js"></script>
-    <script src="http://cdn.kendostatic.com/2015.1.318/js/kendo.all.min.js"></script>
+    <script src="js/kendo.all.min.js"></script>
     <script src="bower_components/everlive/min/everlive.all.min.js"></script>
     <script src="app.js"></script>
     <script src="data/defaultProvider.js"></script>
     <style>
     .headline .hidden-data { 
-    display: none; 
+    	display: none; 
     }
     .headline .headline-thumbnail { 
         float: right;  
