--- a/Mining News from MINING.com/index.html
+++ b/Mining News from MINING.com/index.html
@@ -30,6 +30,13 @@
  		#main-layout-footer {
 			text-align: center;
 		}
+		#main-layout-footer a {
+			display: block;
+			max-width: 100%;
+		}
+		#main-layout-footer a img {
+			max-width: 100%;
+		}
 		#advertpro_content {
 			display: none;
 		}
@@ -39,11 +46,12 @@
 </head>
 
 <body id="kendouimobileapp">
-<div id="advertpro_content">
-	<script type="text/javascript">
-	if (document.avp_ready) { avp_zone({ base: 'tanzanite.infomine.com', type: 'banner', zid: 1014, pid: 0 }); }
-	</script>
-</div>
+	<div id="advertpro_content">
+		<script type="text/javascript">
+		if (document.avp_ready && screen.width > 400 ) { avp_zone({ base: 'tanzanite.infomine.com', type: 'banner', zid: 1048, pid: 0 }); }
+		else if (document.avp_ready) { avp_zone({ base: 'tanzanite.infomine.com', type: 'banner', zid: 1014, pid: 0 }); }
+		</script>
+	</div>
 	
     <div data-role="layout" data-id="main">
         <header data-role="header">
@@ -58,10 +66,6 @@
         <!-- application views will be rendered here -->
 
         <footer data-role="footer" id="main-layout-footer">
-			
-<!-- 						<script type="text/javascript">
-						document.write('<scr'+'ipt src="http://tanzanite.infomine.com/servlet/view/banner/javascript/zone?zid=1014&pid=0&random='+Math.floor(89999999*Math.random()+10000000)+'&millis='+new Date().getTime()+'&referrer='+encodeURIComponent(document.location)+'" type="text/javascript"></scr'+'ipt>');
-						</script> -->
         </footer>
     </div> 
     
@@ -89,7 +93,7 @@
 
                 <script type="text/x-kendo-template" id="template">
 					<span class="headline">
-                        <img src="#=thumbnail.src#" height="60px" class="headline-thumbnail"/>
+                        <img src="#= thumbnail.src #" height="60px" class="headline-thumbnail"/>
                         <span class="headline-title">#:title#</span>
                         <span class="headline-date">#:kendo.toString(kendo.parseDate(pubDate), "MMMM d, yyyy")#</span>
                         <span class="headline-summary hidden-data">#=fulltext#</span>
@@ -113,14 +117,17 @@
                                 }
                             },
 							schema: {
-								mode: {
+								model: {
 									id: "id",
 									fields: {
 										id: "id",
 										title: "title",
 										author: "author",
 										pubDate: "pubDate",
-										fulltext: "fulltext"
+										fulltext: "fulltext",
+										thumbnail_small: {
+											defaultValue: ""
+										}
 									}
 								}
 							}
@@ -136,12 +143,13 @@
         						window.app.mobileApp.hideLoading();
 							},
 							click: function(e) {
+								e.preventDefault();
 								var itemUID = $(e.target).data("uid");
                                 var data = {
                                     title: $(".headline-title",e.item).text(),
                                     author: $(".headline-author",e.item).text(),
                                     pubDate: $(".headline-date",e.item).text(),
-                                    thumbnail: $(".headline-thumbnail",e.item).attr('src'),
+                                    thumbnail: $(".headline-thumbnail",e.item).attr("src"),
                                     content: $(".headline-summary",e.item).html()
                                 };
 								
@@ -151,7 +159,13 @@
                                 $("#articleView-container").html(result);
 								$("a", $("#articleView-container")).on("click", function(e) {
 									e.preventDefault();
-									window.open($(this).attr("href"), '_blank', 'location=yes');
+									//window.open($(this).attr("href"), '_blank', 'location=yes');
+			if (kendo.support.mobileOS.android) {
+				navigator.app.loadUrl($(this).attr("href"), { openExternal:true } );
+			}
+			if (kendo.support.mobileOS.ios) {
+				window.open($(this).attr("href"), '_system');
+			} 
 								});
 								app.mobileApp.navigate("#articleView?UID=" + itemUID);
 							}
@@ -196,8 +210,15 @@
 	$(function(){
 		$("a", $("#advertpro_content")).on("click", function(e) {
 			e.preventDefault();
-			window.open($(this).attr("href"), '_blank', 'location=yes');
+			//window.open($(this).attr("href"), '_blank', 'location=yes');
+			if (kendo.support.mobileOS.android) {
+				navigator.app.loadUrl($(this).attr("href"), { openExternal:true } );
+			}
+			if (kendo.support.mobileOS.ios) {
+				window.open($(this).attr("href"), '_system');
+			} 
 		});
+		$("#advertpro_content img").attr("height","");
 		$("#main-layout-footer").html( $("#advertpro_content a") );
 	})
 	</script>
